# creature-rl-env

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  HARNESS-PORT-MANIFEST.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: plan-reviewer.md  qa-verifier.md
.claude/commands/: task-end.md  task-start.md
.claude/data/: git-branch-prefixes.json  path-criticality.json  path-criticality.schema.json
.claude/hooks/: agent-worktree-return-handler.py  agent-worktree-stop-guard.py  git-policy-guard.py  harness-commit-guard.py  harness-commit-intent-record.py  harness-task-intent-nudge.py  harness-task-start-guard.py  task-end-archive-guard.py  (+1 more)
docs/: CHANGELOG.md  HANDOFF-differentiation.md  HANDOFF-next-session.md
scripts/: attrition_closure_scout.py  battle_arena_probe.py  bench_throughput.py  benchmark.py  build_site.py  colab_gpu_bench.ipynb  community_submit.py  difficulty_generalization.py  diversity_dial.py  eval_harness_demo.py  genre_learned_transfer.py  gpu_bench.py  hard_benchmark_memory.py  inference_difficulty_curve.py  jax_rl_demo.py  killer_demo.py  learnability.py  list_env_tiers.py  llm_diversity_curve.py  llm_eval_demo.py  llm_eval_run.py  multitype_boss_headroom.py  multitype_boss_scout.py  package_sealed_eval.py  ppo_baseline.py  recurrent_baseline.py  recurrent_ppo_baseline.py  reproduce_results.py  sota_headroom.py  strict_battle_scout.py  super_effective_scout.py  tier_eval_bundle_demo.py  train_ppo.py
site/: how-it-works.html  how-it-works.ko.html  index.html  index.ko.html
tests/: test_arena_env.py  test_attrition_closure.py  test_baselines.py  test_battle.py  test_build_site.py  test_champion_action.py  test_community.py  test_compliance.py  test_creatures.py  test_demo.py  test_determinism.py  test_difficulty_dynamic_range.py  test_difficulty_generalization.py  test_diversity_dial.py  test_duel_env.py  test_env.py  test_env_family.py  test_env_tier.py  test_eval_harness.py  test_eval_marketplace.py  test_eval_package.py  test_generalization.py  test_genre_generalization.py  test_genre_learned_transfer.py  test_gym_battle.py  test_headroom.py  test_inference_curve.py  test_inference_rigor.py  test_jax_battle_full_parity.py  test_jax_battle_parity.py  test_jax_difficulty_parity.py  test_jax_duel_parity.py  test_jax_env_parity.py  test_jax_family_parity.py  test_jax_hard_config_parity.py  test_jax_multitype_boss_parity.py  test_jax_noncommit_env_parity.py  test_jax_parity.py  test_jax_ppo.py  test_jax_recurrent.py  (+24 more)
(+441 files in other folders)
