[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critter-gym"
version = "1.0.0rc1"
description = "Procedurally-generated creature-collection RL environment for benchmarking long-horizon agency, strategic reasoning, and generalization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CritterGym" }]
keywords = ["reinforcement-learning", "gymnasium", "benchmark", "procgen", "rlvr"]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.8",
    "pytest>=8.0",
    "build>=1.0",
]
# Optional — only needed for the PPO learning demo (scripts/train_ppo.py).
# Deliberately kept out of `dev`/core so the default test suite + CI stay numpy-only.
rl = [
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",  # RecurrentPPO (recurrent baseline, M3-EC1)
]
# Optional — only needed to render the measurement plots (critter_gym.viz, M3-EC3).
# Kept out of core/dev so the default test suite + CI stay numpy-only.
viz = [
    "matplotlib>=3.7",
]
# Optional — only needed to encode rendered frames into a GIF (critter_gym.render
# save_gif, M3-EC6 demo). rgb_array frames themselves are numpy-only (core).
render = [
    "imageio>=2.31",
]
# Optional — only needed for the JAX hot-path port (critter_gym.jax_overworld, M4)
# and the throughput benchmark's JAX rows (scripts/bench_throughput.py). Kept out of
# core/dev so the default test suite + CI stay numpy-only (parity test importorskips).
# jax<=0.4.30 is the last line supporting Python 3.9 (this repo's floor).
jax = [
    "jax>=0.4,<0.4.31",
    "jaxlib>=0.4,<0.4.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/critter_gym"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Lint only product code. `.claude/` (harness) and `docs/` are owned separately
# (see .claude/rules/_ownership.md) and are not written to this config's rules.
extend-exclude = [".claude", "docs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["gymnasium.*", "matplotlib.*", "imageio.*", "jax.*", "jaxlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
